Fix template error, update error message, and update button spacing on downloads

--- a/assets/less/pages/download.less
+++ b/assets/less/pages/download.less
@@ -319,4 +319,9 @@
       color: var(--warning-links);
     }
   }
+
+  .download-spacing {
+    margin-top: 4rem;
+    margin-bottom: 4rem;
+  }
 }
